2013-02-03 Frederik "Freso" S. Olesen <archlinux@freso.dk>

	* 20130203-1 :
	Added ChangeLog.

2013-01-25 Frederik "Freso" S. Olesen <archlinux@freso.dk>

	* 20130125-1 :
	Initial version of the morituri-git PKGBUILD.
	Original porting from morituri-svn done by morituri-svn's maintainer, jtxx000.